@@ -15,3 +15,4 @@ mrxvt support: draw-test does not work @bug
 (A) document .inputField() options 'minLength', 'default', 'style' and 'cancelable' @doc
 (A) document .createLayout() @doc
 (A) document .inputField() option 'area' @doc
+(A) document .inputField() option 'keyBindings' @doc
