@@ -45,14 +45,34 @@ Form.create = function createForm( def , options )
 	var form = Object.create( Form.prototype , {
 		term: { value: this } ,
 		inputs: { value: def.inputs , enumerable: true } ,
+		inputFields: { value: def.inputs , enumerable: true , writable: true } ,
+		x: { value: def.x || 1 , enumerable: true , writable: true } ,
+		y: { value: def.y || 1 , enumerable: true , writable: true } ,
+		width: { value: def.width || 78 , enumerable: true , writable: true } ,
+		activeFieldIndex: { value: def.activeField || 0 , enumerable: true , writable: true } ,
 	} ) ;
 	
-	//Object.defineProperties( form , { onResize: { value: onResize.bind( form ) } } ) ;
+	Object.defineProperties( form , {
+		onKey: { value: onKey.bind( form ) }
+	} ) ;
 	
 	return form ;
 } ;
 
 module.exports = Form.create ;
+
+
+
+var inputFieldKeyBindings = {
+	BACKSPACE: 'backDelete' ,
+	DELETE: 'delete' ,
+	LEFT: 'backward' ,
+	RIGHT: 'forward' ,
+	UP: 'up' ,
+	DOWN: 'down' ,
+	HOME: 'startOfLine' ,
+	END: 'endOfLine'
+} ;
 
 
 
@@ -70,11 +90,69 @@ Form.prototype.run = function run()
 	
 	for ( i = 0 ; i < iMax ; i ++ )
 	{
-		this.term.moveTo( 1 , i + 1 , this.inputs[ i ].label ).column( labelMaxLength + 2 , ': ' ) ;
+		// Write the label
+		this.term.styleReset.moveTo( this.x , this.y + i , this.inputs[ i ].label ).column( this.x + labelMaxLength + 1 , ': ' ) ;
+		
+		// Create the input field
+		this.inputFields[ i ] = this.term.inputField( {
+				keyBindings: inputFieldKeyBindings ,
+				area: {
+					x: this.x + labelMaxLength + 3 ,
+					y: this.y + i ,
+					width: this.width - labelMaxLength ,
+					height: 1 ,
+					textAttr: { color: 'brightYellow' , bgColor: 'blue' } ,
+					emptyAttr: { bgColor: 'blue' } ,
+				}
+			} , function() {}
+		) ;
+		
+		// Unfocus them all
+		this.inputFields[ i ].focus( false ) ;
 	}
 	
-	this.term( '\n' ) ;
+	this.inputFields[ iMax ] = this.term.createButton( {
+		label: ' Submit! ' ,
+		x: this.x ,
+		y: this.y + iMax ,
+		focus: false ,
+	} ) ;
+	
+	// Focus only the active one
+	this.inputFields[ this.activeFieldIndex ].focus( true ) ;
+	
+	this.term.on( 'key' , this.onKey ) ;
 } ;
+
+
+
+function onKey( key , trash , data )
+{
+	switch ( key )
+	{
+		case 'KP_ENTER' :
+		case 'ENTER' :
+			if ( this.inputFields[ this.activeFieldIndex ].widgetType === 'button' )
+			{
+				this.term( '\nSubmitted!\n' ) ;
+				break ;
+			}			// jshint ignore:line
+		case 'TAB' :	// jshint ignore:line
+			this.inputFields[ this.activeFieldIndex ].focus( false ) ;
+			this.activeFieldIndex ++ ;
+			if ( this.activeFieldIndex >= this.inputFields.length ) { this.activeFieldIndex = 0 ; }
+			this.inputFields[ this.activeFieldIndex ].focus( true ) ;
+			this.inputFields[ this.activeFieldIndex ].redraw() ;
+			break ;
+		case 'SHIFT_TAB' :
+			this.inputFields[ this.activeFieldIndex ].focus( false ) ;
+			this.activeFieldIndex -- ;
+			if ( this.activeFieldIndex < 0 ) { this.activeFieldIndex = this.inputFields.length - 1 ; }
+			this.inputFields[ this.activeFieldIndex ].focus( true ) ;
+			this.inputFields[ this.activeFieldIndex ].redraw() ;
+			break ;
+	}
+}
 
 
 
