@@ -35,6 +35,40 @@ var TextBuffer = require( './TextBuffer.js' ) ;
 
 
 
+var defaultInlineKeyBindings = {
+	ENTER: 'submit' ,
+	KP_ENTER: 'submit' ,
+	ESCAPE: 'cancel' ,
+	BACKSPACE: 'backDelete' ,
+	DELETE: 'delete' ,
+	LEFT: 'backward' ,
+	RIGHT: 'forward' ,
+	UP: 'historyPrevious' ,
+	DOWN: 'historyNext' ,
+	HOME: 'startOfInput' ,
+	END: 'endOfInput' ,
+	TAB: 'autoComplete'
+} ;
+
+
+
+var defaultAreaKeyBindings = {
+	ENTER: 'submit' ,
+	KP_ENTER: 'submit' ,
+	ESCAPE: 'cancel' ,
+	BACKSPACE: 'backDelete' ,
+	DELETE: 'delete' ,
+	LEFT: 'backward' ,
+	RIGHT: 'forward' ,
+	UP: 'up' ,
+	DOWN: 'down' ,
+	HOME: 'startOfLine' ,
+	END: 'endOfLine' ,
+	TAB: 'autoComplete'
+} ;
+
+
+
 /*
 	inputField( [options] , callback )
 		* options `Object` where:
@@ -56,11 +90,14 @@ var TextBuffer = require( './TextBuffer.js' ) ;
 			  any auto-complete attempt having many completion candidates will display a menu to let the user choose between each
 			  possibilities. If an object is given, it should contain options for the [.singleLineMenu()](#ref.singleLineMenu)
 			  that is used for the completion (notice: some options are overwritten: 'y' and 'exitOnUnexpectedKey')
+			* keyBindings `Object` overide default key bindings
 			* area `Object` define a rectangular area for the inputField, where
-				* x: x coordinate of the top-left corner
-				* y: y coordinate of the top-left corner
-				* width: width of the area
-				* height: height of the area
+				* x `number` x coordinate of the top-left corner
+				* y `number` y coordinate of the top-left corner
+				* width `number` width of the area
+				* height `number`  height of the area
+				* textAttr `Object` an attr object for text cells
+				* emptyAttr `Object` an attr object for empty cells
 		* callback( error , input )
 			* error `mixed` truthy if an underlying error occurs
 			* input `string` the user input
@@ -83,16 +120,16 @@ module.exports = function inputField( options , callback )
 		delete options.autoCompleteMenu.y ;
 	}
 	
-	
 	if ( ! this.grabbing ) { this.grabInput() ; }
 	
 	
 	
 	var self = this , controler , finished = false , pause = false , alreadyCleanedUp = false ,
 		offset = 0 , echo = !! options.echo ,
+		keyBindings ,
 		start = {} , end = {} , cursor = {} ,
 		inputs = [] , inputIndex , writeStyle = options.style || self ,
-		inlineMode , screenBuffer , textBuffer ;
+		inlineMode , screenBuffer , textBuffer , textAttr ;
 	
 	
 	
@@ -126,6 +163,8 @@ module.exports = function inputField( options , callback )
 		{
 			inlineMode = false ;
 			
+			keyBindings = options.keyBindings || defaultAreaKeyBindings ;
+			
 			screenBuffer = ScreenBuffer.create( {
 				dst: options.dst || self ,
 				x: options.area.x ,
@@ -139,13 +178,16 @@ module.exports = function inputField( options , callback )
 				forceInBound: true
 			} ) ;
 			
-			if ( options.area.emptyCellAttr ) { textBuffer.setEmptyCellAttr( options.area.emptyCellAttr ) ; }
+			if ( options.area.emptyAttr ) { textBuffer.setEmptyCellAttr( options.area.emptyAttr ) ; }
+			if ( options.area.textAttr ) { textAttr = ScreenBuffer.object2attr( options.area.textAttr ) ; }
 			
 			finishInit() ;
 			return ;
 		}
 		
 		inlineMode = true ;
+		
+		keyBindings = options.keyBindings || defaultInlineKeyBindings ;
 		
 		// Get the cursor location before getting started
 		self.getCursorLocation( function( error , x , y ) {
@@ -375,19 +417,22 @@ module.exports = function inputField( options , callback )
 		{
 			// Here we have a special key
 			
-			switch ( key )
+			switch( keyBindings[ key ] )
 			{
-				case 'ENTER' :
-				case 'KP_ENTER' :
+				//case 'ENTER' :
+				//case 'KP_ENTER' :
+				case 'submit' :
 					if ( inputs[ inputIndex ].length < options.minLength ) { break ; }
 					cleanup( undefined , inputs[ inputIndex ] ) ;
 					break ;
 				
-				case 'ESCAPE' :
+				//case 'ESCAPE' :
+				case 'cancel' :
 					if ( options.cancelable ) { cleanup() ; }
 					break ;
 				
-				case 'BACKSPACE' :
+				//case 'BACKSPACE' :
+				case 'backDelete' :
 					if ( inputs[ inputIndex ].length && offset > 0 )
 					{
 						//inputs[ inputIndex ] = inputs[ inputIndex ].slice( 0 , offset - 1 ) + inputs[ inputIndex ].slice( offset ) ;
@@ -411,7 +456,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'DELETE' :
+				//case 'DELETE' :
+				case 'delete' :
 					if ( inputs[ inputIndex ].length && offset < inputs[ inputIndex ].length )
 					{
 						//inputs[ inputIndex ] = inputs[ inputIndex ].slice( 0 , offset ) + inputs[ inputIndex ].slice( offset + 1 ) ;
@@ -434,7 +480,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'LEFT' :
+				//case 'LEFT' :
+				case 'backward' :
 					if ( inputs[ inputIndex ].length && offset > 0 )
 					{
 						offset -- ;
@@ -447,7 +494,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'RIGHT' :
+				//case 'RIGHT' :
+				case 'forward' :
 					if ( inputs[ inputIndex ].length && offset < inputs[ inputIndex ].length )
 					{
 						offset ++ ;
@@ -460,7 +508,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'HOME' :
+				//case 'HOME' :
+				case 'startOfInput' :
 					offset = 0 ;
 					if ( echo )
 					{
@@ -469,7 +518,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'END' :
+				//case 'END' :
+				case 'endOfInput' :
 					offset = inputs[ inputIndex ].length ;
 					if ( echo )
 					{
@@ -478,7 +528,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'DOWN' :
+				//case 'DOWN' :
+				case 'historyNext' :
 					if ( inputIndex < inputs.length - 1 )
 					{
 						inputIndex ++ ;
@@ -495,7 +546,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'UP' :
+				//case 'UP' :
+				case 'historyPrevious' :
 					if ( inputIndex > 0 )
 					{
 						inputIndex -- ;
@@ -512,7 +564,8 @@ module.exports = function inputField( options , callback )
 					}
 					break ;
 				
-				case 'TAB' :
+				//case 'TAB' :
+				case 'autoComplete' :
 						
 					if ( ! options.autoComplete ) { break ; }
 					
@@ -582,7 +635,7 @@ module.exports = function inputField( options , callback )
 		{
 			// if data.isCharacter, this is a regular UTF-8 character, not a special key
 			//if ( inputs[ inputIndex ].length >= options.maxLength ) { return ; }
-			if ( options.area.textAttr ) { textBuffer.insert( key , options.area.textAttr ) ; }
+			if ( textAttr ) { textBuffer.insert( key , textAttr ) ; }
 			else { textBuffer.insert( key ) ; }
 			//textBuffer.insert( key , { color: 'white' } ) ;
 			areaDraw() ;
@@ -591,12 +644,11 @@ module.exports = function inputField( options , callback )
 		{
 			// Here we have a special key
 			
-			switch ( key )
+			switch( keyBindings[ key ] )
 			{
-				case 'ENTER' :
-				case 'KP_ENTER' :
-					//textBuffer.newLine() ;
-					//areaDraw() ;
+				//case 'ENTER' :
+				//case 'KP_ENTER' :
+				case 'submit' :
 					
 					//if ( inputs[ inputIndex ].length < options.minLength ) { break ; }
 					//cleanup( undefined , inputs[ inputIndex ] ) ;
@@ -604,51 +656,62 @@ module.exports = function inputField( options , callback )
 					cleanup( undefined , textBuffer.getText() ) ;
 					break ;
 				
-				case 'ESCAPE' :
+				case 'newLine' :
+					textBuffer.newLine() ;
+					areaDraw() ;
+					break ;
+				
+				//case 'ESCAPE' :
+				case 'cancel' :
 					if ( options.cancelable ) { cleanup() ; }
 					break ;
 				
-				case 'BACKSPACE' :
+				//case 'BACKSPACE' :
+				case 'backDelete' :
 					textBuffer.backDelete() ;
 					areaDraw() ;
 					break ;
 				
-				case 'DELETE' :
+				//case 'DELETE' :
+				case 'delete' :
 					textBuffer.delete() ;
 					areaDraw() ;
 					break ;
 				
-				case 'LEFT' :
+				//case 'LEFT' :
+				case 'backward' :
 					textBuffer.moveBackward() ;
 					areaDrawCursor() ;
 					break ;
 				
-				case 'RIGHT' :
+				//case 'RIGHT' :
+				case 'forward' :
 					textBuffer.moveForward() ;
 					areaDrawCursor() ;
 					break ;
 				
-				case 'HOME' :
+				//case 'HOME' :
+				case 'startOfLine' :
 					textBuffer.moveToColumn( 0 ) ;
 					areaDrawCursor() ;
 					break ;
 				
-				case 'END' :
+				//case 'END' :
+				case 'endOfLine' :
 					textBuffer.moveToEndOfLine() ;   
 					areaDrawCursor() ;
 					break ;
 				
-				case 'DOWN' :
+				//case 'DOWN' :
+				case 'down' :
 					textBuffer.moveDown() ;
 					areaDrawCursor() ;
 					break ;
 				
-				case 'UP' :
+				//case 'UP' :
+				case 'up' :
 					textBuffer.moveUp() ;
 					areaDrawCursor() ;
-					break ;
-				
-				case 'TAB' :
 					break ;
 			}
 		}
@@ -663,32 +726,41 @@ module.exports = function inputField( options , callback )
 	// Ready?
 	controler.ready = false ;
 	
+	// Tmp, for compatibility
+	controler.widgetType = 'inputField' ;
+	
 	// Stop everything and do not even call the callback
-	controler.abort = function abort()
+	controler.abort = function controlerAbort()
 	{
 		if ( finished ) { return ; }
 		cleanup( 'abort' ) ;
 	} ;
 	
 	// Stop and call the completion callback with the current input
-	controler.stop = function stop()
+	controler.stop = function controlerStop()
 	{
 		if ( finished ) { return ; }
 		cleanup( undefined , inputs[ inputIndex ] ) ;
 	} ;
 	
 	// Pause and resume: the input field will not respond to event when paused
-	controler.pause = function pause_() { pause = true ; } ;
-	controler.resume = function resume() { pause = false ; } ;
+	controler.pause = function controlerPause() { pause = true ; } ;
+	controler.resume = function controlerResume() { pause = false ; } ;
+	
+	controler.focus = function controlerFocus( value )
+	{
+		pause = ! value ;
+		if ( ! inlineMode ) { areaDrawCursor() ; }
+	} ;
 	
 	// Get the current input
-	controler.getInput = function getInput() { return inputs[ inputIndex ].join( '' ) ; } ;
+	controler.getInput = function controlerGetInput() { return inputs[ inputIndex ].join( '' ) ; } ;
 	
 	// Get the current input
-	controler.getPosition = function getPosition() { return { x: start.x , y: start.y } ; } ;
+	controler.getPosition = function controlerGetPosition() { return { x: start.x , y: start.y } ; } ;
 	
 	// Hide the input field
-	controler.hide = function hide()
+	controler.hide = function controlerHide()
 	{
 		if ( ! controler.ready ) { controler.once( 'ready' , controler.hide ) ; return ; }
 		
@@ -703,7 +775,7 @@ module.exports = function inputField( options , callback )
 	} ;
 	
 	// Show the input field
-	controler.show = function show()
+	controler.show = function controlerShow()
 	{
 		if ( ! controler.ready ) { controler.once( 'ready' , controler.show ) ; return ; }
 		
@@ -712,7 +784,7 @@ module.exports = function inputField( options , callback )
 	} ;
 	
 	// Redraw the input field
-	controler.redraw = function redraw()
+	controler.redraw = function controlerRedraw()
 	{
 		if ( ! controler.ready ) { controler.once( 'ready' , controler.redraw ) ; return ; }
 		
@@ -720,8 +792,9 @@ module.exports = function inputField( options , callback )
 	} ;
 	
 	// Rebase the input field where the cursor is
-	controler.rebase = function rebase()
+	controler.rebase = function controlerRebase()
 	{
+		if ( ! inlineMode ) { return ; }
 		if ( ! controler.ready ) { controler.once( 'ready' , controler.rebase ) ; return ; }
 		
 		// First, disable echoing: getCursorLocation is async!
