@@ -818,6 +818,7 @@ notChainable.slowTyping = require( './slowTyping.js' ) ;
 //notChainable.Layout = require( './Layout.js' ) ;
 notChainable.createLayout = require( './layout.js' ) ;
 notChainable.createForm = require( './form.js' ) ;
+notChainable.createButton = require( './button.js' ) ;
 
 
 
